# scripts_fhir

./: README.md  pyproject.toml
src/read_and_edit/: add_nationality_extension.py  patient-api.json  read_from_api.py  read_from_json.py
src/signature/: README.md  convert_jwk.py  patient.json  sign.py  verify.py
